@@ -1,4 +1,5 @@
 Development
+	Add embed command 'NoCache'
 	Callback event "onDestroy"
 	Add support for option "enableContextMenu"
 	Add more callback events onmouseclick, onmousedown, onmouseup, onmouseover, onmouseout
